chore: implemented movies provider fetching with prowlarr and testing
